--- a/pom.xml
+++ b/pom.xml
@@ -90,4 +90,36 @@
 		</dependency>
 
 	</dependencies>
+	<build>
+<pluginManagement><!-- lock down plugins versions to avoid using Maven 
+defaults (may be moved to parent pom) -->
+<plugins>
+
+ 
+
+<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+<plugin>
+<artifactId>maven-resources-plugin</artifactId>
+<version>3.0.1</version>
+</plugin>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.7.0</version>
+<configuration>
+<source>1.8</source>
+<target>1.8</target>
+</configuration>
+</plugin>
+<plugin>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.22.2</version>
+</plugin>
+
+ 
+
+
+</plugins>
+</pluginManagement>
+</build>
 </project>
